# local26

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  floor2.txt  hosts.txt  m2-settings.cfg  pyproject.toml  sf-integration-notes.md  xander.txt
.github/ISSUE_TEMPLATE/: bug-report.md  feedback.md
.github/workflows/: ci.yml
docs/: command-execution-safety.md  commands.md  config-schema.md  connectors.md  desired-state.md  first-deploy-walkthrough.md  fleet.md  guided-setup.md  hooks.md  index.md  local26-phase1-progress-2026-04-06.md  local26-project-task-chain-2026-04-06.json  local81-phase1-progress-2026-04-06.md  local81-project-task-chain-2026-04-06.json  plan-schema.md  profiles.md  project-task-schema.json  quickstart.md  rollback.md  scheduling.md  secrets.md  seraf-phase1-progress-2026-04-06.md  seraf-project-task-chain-2026-04-06.json  setup-guide.md  troubleshooting.md  when-to-use-local26.md  when-to-use-local81.md  when-to-use-seraf.md  xander-project-task-runner-plan-2026-04-06.md  xander-task-runner-systemd-and-layout-2026-04-06.md
docs/schemas/: plan.v2.schema.json
examples/: legacy-settings.cfg.example  profile-prod.yaml
packaging/common/: local26-wrapper  local81-wrapper
packaging/deb/: README.md  build-deb.sh  test-deb.sh
packaging/rpm/: README.md  build-rpm-container.sh  build-rpm.sh  local26.ini  local26.spec  local81.ini  local81.spec  seraf.ini  seraf.spec  test-rpm.sh
src/local26/: cli.py  config.py  errors.py  execution_safety.py  hooks.py  models.py  notifications.py  paths.py  plan_integrity.py  policy.py  profiles.py  state.py
src/local81/: cli.py  config.py  connectors.py  errors.py  fleet.py  hooks.py  (+10 more)
systemd/: xander-task-runner.service
tests/: test_access_policy.sh  test_config_validation.sh  test_deploy.sh  test_diag.sh  test_doctor.sh  test_history_logs.sh  test_hooks_profiles.sh  test_init.sh  test_init_guided.sh  test_init_modern.sh  test_parallel.sh  test_plan.sh  test_plan_summary.sh  test_pull.sh  test_pull_logs.sh  test_python_cli_dispatch.py  test_python_compliance.py  test_python_connectors.py  test_python_db.py  test_python_deploy.py  test_python_diag.py  test_python_diff.py  test_python_doctor.py  test_python_facts.py  test_python_fleet.py  test_python_gc.py  test_python_guided.py  test_python_history.py  test_python_hooks_profiles_notifications.py  test_python_logs.py  test_python_ops.py  test_python_paths.py  test_python_plan.py  test_python_pull.py  test_python_pull_logs.py  test_python_resolve.py  test_python_rollback.py  test_python_rollback_cmd.py  test_python_runner.py  test_python_schedule_cmd.py  (+8 more)
tools/: SF-seraf-p1-LATEST.b64.txt  format-check.py  pack-for-work.sh  rename-restore.sh  security-check.py  unpack-from-work.sh
(+109 files in other folders)
